--- a/readmeai/settings/dependency_files.toml
+++ b/readmeai/settings/dependency_files.toml
@@ -1,13 +1,57 @@
-# Programming language dependency file names
+# Dependency file names grouped by language.
 
 [dependency_files]
 dependency_files = [
     # Docker
     'Dockerfile',
+    'Dockerfile.dev',
     'docker-compose.yml',
     'docker-compose.yaml',
-    'docker-compose.override.yml',
-    'docker-compose.dev.yml',
+
+    # Python
+    'Pipfile',
+    'Pipfile.lock',
+    "poetry.lock",
+    'pyproject.toml',
+    'requirements.in',
+    'requirements.txt',
+    'requirements-dev.txt',
+    'requirements-prod.txt',
+    'requirements.test.txt',
+    "dev-requirements.txt",
+    'conda.yaml',
+    'conda.yml',
+    'environment.yml',
+    'environment.yaml',
+    'setup.cfg',
+    'setup.py',
+    'tox.ini',
+
+    # JavaScript/Node.js
+    'package.json',
+    'yarn.lock',
+    'package-lock.json',
+    '.npmrc',
+    '.nvmrc',
+
+    # Java
+    'build.gradle',
+    'build.gradle.kts',
+    'pom.xml',
+
+    # Kotlin
+    'build.gradle.kts',
+
+    # TypeScript
+    'tsconfig.json',
+
+    # Go
+    'go.mod',
+    'go.sum',
+
+    # Rust
+    'Cargo.toml',
+    'Cargo.lock',
 
     # C/C++
     'CMakeLists.txt',
@@ -15,41 +59,34 @@ dependency_files = [
     'Makefile.am',
     'configure.ac',
 
-    # Go
-    'go.mod',
-    'go.sum',
+    # C#
+    '.csproj',
+    'packages.config',
+    'Directory.Build.props',
+    'Directory.Build.targets',
+    '.editorconfig',
 
-    # Java
-    'build.gradle',
-    'build.gradle.kts',
-    'pom.xml',
-
-    # Python
-    'Pipfile',
-    'Pipfile.lock',
-    "poetry.lock",
-    'pyproject.toml',
-    'conda.yaml',
-    'conda.yml',
-    "environment.yml",
-    "environment.yaml",
-    'requirements.in',
-    'requirements.txt',
-    'requirements-dev.txt',
-    'requirements-prod.txt',
-    'requirements.test.txt',
-    "dev-requirements.txt",
-    'setup.cfg',
-    'setup.py',
-
-    # Rust
-    'Cargo.toml',
-    'Cargo.lock',
+    # PHP
+    'composer.json',
+    'composer.lock',
+    'phpunit.xml',
+    'phpunit.xml.dist',
+    '.env',
 
     # Ruby
     'Gemfile',
     'Gemfile.lock',
     'Rakefile',
+
+    # Swift
+    'Package.swift',
+    'Podfile.lock',
+
+    # Haskell
+    'stack.yaml',
+    'package.yaml',
+    'cabal.project',
+    'myapp.cabal',
 
     # Clojure
     'project.clj',
@@ -59,29 +96,6 @@ dependency_files = [
     'mix.exs',
     'mix.lock',
 
-    # JavaScript/Node.js
-    'package.json',
-    'yarn.lock',
-    'package-lock.json',
-    '.npmrc',
-    '.nvmrc',
-
-    # TypeScript
-    'tsconfig.json',
-
-    # PHP
-    'composer.json',
-    'composer.lock',
-    'phpunit.xml',
-    'phpunit.xml.dist',
-
-    # Swift
-    'Package.swift',
-    'Podfile.lock',
-
-    # Kotlin
-    'build.gradle.kts',
-
     # Dart/Flutter
     'pubspec.yaml',
 
@@ -89,9 +103,6 @@ dependency_files = [
     'DESCRIPTION',
     'NAMESPACE',
     'renv.lock',
-
-    # Shell
-    'Dockerfile',
 
     # Scala
     'build.sbt',
@@ -104,18 +115,6 @@ dependency_files = [
 
     # Julia
     'Project.toml',
-
-    # Haskell
-    'stack.yaml',
-    'package.yaml',
-    'cabal.project',
-    'myapp.cabal',  # Replace 'myapp' with actual project name
-
-    # C#
-    '.csproj',
-    'packages.config',
-    'Directory.Build.props',
-    'Directory.Build.targets',
 
     # F#
     '.fsproj',
@@ -130,15 +129,6 @@ dependency_files = [
     'cpanfile',
     'Makefile.PL',
     'Build.PL',
+    '.perltidyrc',
 
-    # Docker
-    "Dockerfile",
-    "docker-compose.yml",
-    "docker-compose.override.yml",
-    "docker-compose.dev.yml",
-    "docker-compose.yaml",
-
-    # General/Other
-    '.gitignore',
-    '.dockerignore',
 ]
