--- a/readmeai/settings/config.toml
+++ b/readmeai/settings/config.toml
@@ -13,14 +13,15 @@ repository = "https://github.com/eli64s/readme-ai"
 
 # Language Model API Settings
 [llm]
+api = "openai"
 content = "You're a brilliant Tech Lead and Software Engineer."
 endpoint = "https://api.openai.com/v1/chat/completions"
 encoding = "cl100k_base"
 model = "gpt-3.5-turbo"
 offline = false
-rate_limit = 5
-temperature = 0.8
-tokens = 750
+rate_limit = 6
+temperature = 0.9
+tokens = 699
 tokens_max = 3899
 
 # Markdown Template Settings
@@ -72,7 +73,7 @@ toc = """
 > - [🧩 Modules](#-modules)
 > - [🚀 Getting Started](#-getting-started)
 >   - [⚙️ Installation](#️-installation)
->   - [🤖 Running {repo_name}](#-running-{repo_name})
+>   - [►Running {repo_name}](#-running-{repo_name})
 >   - [🧪 Tests](#-tests)
 > - [🛠 Project Roadmap](#-project-roadmap)
 > - [🤝 Contributing](#-contributing)
@@ -150,7 +151,7 @@ cd {repo_name}
 {install_command}
 ```
 
-### 🤖 Running {repo_name}
+### ► Running `{repo_name}`
 
 Use the following command to run {repo_name}:
 
@@ -160,7 +161,7 @@ Use the following command to run {repo_name}:
 
 ### 🧪 Tests
 
-To execute tests, run:
+Use the following command to run tests:
 
 ```sh
 {test_command}
@@ -183,15 +184,15 @@ contribute = """
 
 Contributions are welcome! Here are several ways you can contribute:
 
-- **[Submit Pull Requests](https://{host}/{full_name}/blob/main/CONTRIBUTING.md)**: Review open PRs, and submit your own PRs.
-- **[Join the Discussions](https://{host}/{full_name}/discussions)**: Share your insights, provide feedback, or ask questions.
-- **[Report Issues](https://{host}/{full_name}/issues)**: Submit bugs found or log feature requests for {repo_name}.
+- **[Submit Pull Requests](https://{host_domain}/{full_name}/blob/main/CONTRIBUTING.md)**: Review open PRs, and submit your own PRs.
+- **[Join the Discussions](https://{host_domain}/{full_name}/discussions)**: Share your insights, provide feedback, or ask questions.
+- **[Report Issues](https://{host_domain}/{full_name}/issues)**: Submit bugs found or log feature requests for the `{repo_name}` project.
 
 <details closed>
     <summary>Contributing Guidelines</summary>
 
-1. **Fork the Repository**: Start by forking the project repository to your GitHub account.
-2. **Clone Locally**: Clone the forked repository to your local machine using a Git client.
+1. **Fork the Repository**: Start by forking the project repository to your {host} account.
+2. **Clone Locally**: Clone the forked repository to your local machine using a git client.
    ```sh
    git clone {repo_url}
    ```
@@ -233,6 +234,19 @@ This project is protected under the [SELECT-A-LICENSE](https://choosealicense.co
 
 # Language Model Prompts
 [prompts]
+avatar = """Create a simple, modern icon logo on a white background.\
+The logo should feature a design centered around the project's theme and purpose. Provided below are the project details to guide your design:\n
+================================================================================
+Project Name: {project_name}
+Project Slogan: {slogan}
+Project Overview: {overview}
+================================================================================
+Additional design requirements include:
+- The project name must be prominently displayed across the middle of image in a clean, easily readable font.\n
+- The color scheme includes cool tones, such as shades of {color}, to indicate technology and innovation.\n
+- The design conveys a sense of accessibility, clarity, and innovation, suitable for digital platforms\
+such as git repositories and documentation sites, with a minimalistic yet impactful aesthetic.
+"""
 features = """Hello! Please analyze the key technical capabilities and characteristics of the project {0} and describe them in a Markdown table format:
 
 |    |   Feature         | Description |
