--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,19 +4,18 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "readmeai"
-version = "0.5.01"
-description = "🎈 Automated README file generator, powered by GPT language model APIs."
-authors = ["Eli <0x.eli.64s@gmail.com>"]
+version = "0.5.02"
+description = "👾 Automated README file generator"
+authors = ["Eli <egsalamie@gmail.com>"]
 license = "MIT"
 readme = "README.md"
 homepage = "https://github.com/eli64s/readme-ai"
 documentation = "https://eli64s.github.io/readme-ai"
 keywords = [
-  "python",
   "markdown",
   "readme",
   "generator",
-  "devtools",
+  "developer-tools",
   "documentation",
   "documentation-generator",
   "readme-md",
@@ -25,12 +24,13 @@ keywords = [
   "readme-md-generator",
   "shieldsio-badges",
   "openai",
+  "gemini-pro",
   "vertex-ai",
+  "chatgpt",
+  "gpt-4",
   "ai",
   "llms",
   "llm-agent",
-  "gpt-4",
-  "chatgpt",
 ]
 include = ["readmeai", "readmeai.*"]
 
@@ -38,10 +38,12 @@ include = ["readmeai", "readmeai.*"]
 readmeai = "readmeai.cli.commands:main"
 
 [tool.poetry.dependencies]
-python = "^3.8.1,<4.0.0"
+python = "^3.9,<4.0.0"
+aiohttp = "^3.9.2"
 click = "^8.1.7"
 colorlog = "^6.7.0"
 gitpython = "^3.1.31"
+google-cloud-aiplatform = "^1.40.0"
 h2 = "*"
 httpx = "*"
 openai = "^0.27.8"
@@ -66,13 +68,6 @@ pytest-xdist = "*"
 [tool.poetry.group.docs.dependencies]
 mkdocs = "*"
 mkdocs-material = "*"
-
-[tool.poetry.group.optional]
-optional = true
-
-[tool.poetry.group.optional.dependencies]
-# google-cloud-aiplatform = "^1.40.0"
-# litellm = "^1.20.0"
 
 [tool.ruff]
 exclude = [
@@ -111,7 +106,14 @@ ignore = [
 
 [tool.coverage.run]
 source = ["readmeai", "tests"]
-omit = ["tests/*", "*__init__.py", "*/__init__.py", "noxfile.py", "readmeai/llms/base.py", "readmeai/llms/factory.py", "readmeai/llms/chunk.py"]
+omit = [
+    "tests/*",
+    "*__init__.py",
+    "*/__init__.py",
+    "noxfile.py",
+    "readmeai/templates/*.py",
+    "readmeai/ui/*.py"
+]
 
 [tool.coverage.report]
 fail_under = 80
