--- a/.dockerignore
+++ b/.dockerignore
@@ -27,13 +27,26 @@ notebooks/
 Pipfile
 Pipfile.lock
 
-# Documentation
+# Documentation and Automation Files
 docs/
 examples/
 mkdocs.yml
-
-# readmeai
 Makefile
 noxfile.py
+
+# Work In Progress
+# Configuration Files (wip)
+scripts/test_gen.sh
+readmeai/config/settings/models.toml
+readmeai/config/settings/quickstart_wip.toml
+readmeai/config/settings/quickstart.toml
+
+# Github Actions
+.github/workflows/ci.yml
+
+# Submodules (wip)
 readmeai/templates/
-readmeai/markdown/data/icons.json
+readmeai/ui/
+
+# Dalle-3 Images
+examples/images/dalle
