--- a/setup/requirements.txt
+++ b/setup/requirements.txt
@@ -1,49 +1,63 @@
-aiohttp==3.9.1 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
-aiosignal==1.3.1 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
-anyio==4.2.0 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
-async-timeout==4.0.3 ; python_full_version >= "3.8.1" and python_version < "3.11"
-attrs==23.2.0 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
-certifi==2023.11.17 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
-charset-normalizer==3.3.2 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
-click==8.1.7 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
-colorama==0.4.6 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0" and (platform_system == "Windows" or sys_platform == "win32")
-colorlog==6.8.2 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
-distro==1.9.0 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
-exceptiongroup==1.2.0 ; python_full_version >= "3.8.1" and python_version < "3.11"
-filelock==3.13.1 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
-frozenlist==1.4.1 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
-fsspec==2023.12.2 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
-gitdb==4.0.11 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
-gitpython==3.1.41 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
-h11==0.14.0 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
-h2==4.1.0 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
-hpack==4.0.0 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
-httpcore==1.0.2 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
-httpx==0.26.0 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
-huggingface-hub==0.20.3 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
-hyperframe==6.0.1 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
-idna==3.6 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
-importlib-metadata==7.0.1 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
-jinja2==3.1.3 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
-litellm==1.20.1 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
-markupsafe==2.1.4 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
-multidict==6.0.4 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
-openai==1.10.0 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
-packaging==23.2 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
-pydantic==1.10.14 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
-python-dotenv==1.0.1 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
-pyyaml==6.0.1 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
-regex==2023.12.25 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
-requests==2.31.0 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
-setuptools==69.0.3 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
-smmap==5.0.1 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
-sniffio==1.3.0 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
-tenacity==8.2.3 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
-tiktoken==0.4.0 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
-tokenizers==0.15.1 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
-toml==0.10.2 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
-tqdm==4.66.1 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
-typing-extensions==4.9.0 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
-urllib3==2.1.0 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
-yarl==1.9.4 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
-zipp==3.17.0 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+aiohttp==3.9.3 ; python_version >= "3.9" and python_version < "4.0"
+aiosignal==1.3.1 ; python_version >= "3.9" and python_version < "4.0"
+anyio==4.2.0 ; python_version >= "3.9" and python_version < "4.0"
+async-timeout==4.0.3 ; python_version >= "3.9" and python_version < "3.11"
+attrs==23.2.0 ; python_version >= "3.9" and python_version < "4.0"
+cachetools==5.3.2 ; python_version >= "3.9" and python_version < "4.0"
+certifi==2024.2.2 ; python_version >= "3.9" and python_version < "4.0"
+charset-normalizer==3.3.2 ; python_version >= "3.9" and python_version < "4.0"
+click==8.1.7 ; python_version >= "3.9" and python_version < "4.0"
+colorama==0.4.6 ; python_version >= "3.9" and python_version < "4.0" and (platform_system == "Windows" or sys_platform == "win32")
+colorlog==6.8.2 ; python_version >= "3.9" and python_version < "4.0"
+exceptiongroup==1.2.0 ; python_version >= "3.9" and python_version < "3.11"
+frozenlist==1.4.1 ; python_version >= "3.9" and python_version < "4.0"
+gitdb==4.0.11 ; python_version >= "3.9" and python_version < "4.0"
+gitpython==3.1.41 ; python_version >= "3.9" and python_version < "4.0"
+google-api-core==2.16.2 ; python_version >= "3.9" and python_version < "4.0"
+google-api-core[grpc]==2.16.2 ; python_version >= "3.9" and python_version < "4.0"
+google-auth==2.27.0 ; python_version >= "3.9" and python_version < "4.0"
+google-cloud-aiplatform==1.40.0 ; python_version >= "3.9" and python_version < "4.0"
+google-cloud-bigquery==3.17.2 ; python_version >= "3.9" and python_version < "4.0"
+google-cloud-core==2.4.1 ; python_version >= "3.9" and python_version < "4.0"
+google-cloud-resource-manager==1.12.0 ; python_version >= "3.9" and python_version < "4.0"
+google-cloud-storage==2.14.0 ; python_version >= "3.9" and python_version < "4.0"
+google-crc32c==1.5.0 ; python_version >= "3.9" and python_version < "4.0"
+google-resumable-media==2.7.0 ; python_version >= "3.9" and python_version < "4.0"
+googleapis-common-protos==1.62.0 ; python_version >= "3.9" and python_version < "4.0"
+googleapis-common-protos[grpc]==1.62.0 ; python_version >= "3.9" and python_version < "4.0"
+grpc-google-iam-v1==0.13.0 ; python_version >= "3.9" and python_version < "4.0"
+grpcio-status==1.60.1 ; python_version >= "3.9" and python_version < "4.0"
+grpcio==1.60.1 ; python_version >= "3.9" and python_version < "4.0"
+h11==0.14.0 ; python_version >= "3.9" and python_version < "4.0"
+h2==4.1.0 ; python_version >= "3.9" and python_version < "4.0"
+hpack==4.0.0 ; python_version >= "3.9" and python_version < "4.0"
+httpcore==1.0.2 ; python_version >= "3.9" and python_version < "4.0"
+httpx==0.26.0 ; python_version >= "3.9" and python_version < "4.0"
+hyperframe==6.0.1 ; python_version >= "3.9" and python_version < "4.0"
+idna==3.6 ; python_version >= "3.9" and python_version < "4.0"
+multidict==6.0.5 ; python_version >= "3.9" and python_version < "4.0"
+numpy==1.26.4 ; python_version >= "3.9" and python_version < "4.0"
+openai==0.27.10 ; python_version >= "3.9" and python_version < "4.0"
+packaging==23.2 ; python_version >= "3.9" and python_version < "4.0"
+proto-plus==1.23.0 ; python_version >= "3.9" and python_version < "4.0"
+protobuf==4.25.2 ; python_version >= "3.9" and python_version < "4.0"
+pyasn1-modules==0.3.0 ; python_version >= "3.9" and python_version < "4.0"
+pyasn1==0.5.1 ; python_version >= "3.9" and python_version < "4.0"
+pydantic==1.10.14 ; python_version >= "3.9" and python_version < "4.0"
+python-dateutil==2.8.2 ; python_version >= "3.9" and python_version < "4.0"
+pyyaml==6.0.1 ; python_version >= "3.9" and python_version < "4.0"
+regex==2023.12.25 ; python_version >= "3.9" and python_version < "4.0"
+requests==2.31.0 ; python_version >= "3.9" and python_version < "4.0"
+rsa==4.9 ; python_version >= "3.9" and python_version < "4"
+setuptools==69.0.3 ; python_version >= "3.9" and python_version < "4.0"
+shapely==2.0.2 ; python_version >= "3.9" and python_version < "4.0"
+six==1.16.0 ; python_version >= "3.9" and python_version < "4.0"
+smmap==5.0.1 ; python_version >= "3.9" and python_version < "4.0"
+sniffio==1.3.0 ; python_version >= "3.9" and python_version < "4.0"
+tenacity==8.2.3 ; python_version >= "3.9" and python_version < "4.0"
+tiktoken==0.4.0 ; python_version >= "3.9" and python_version < "4.0"
+toml==0.10.2 ; python_version >= "3.9" and python_version < "4.0"
+tqdm==4.66.1 ; python_version >= "3.9" and python_version < "4.0"
+typing-extensions==4.9.0 ; python_version >= "3.9" and python_version < "4.0"
+urllib3==2.2.0 ; python_version >= "3.9" and python_version < "4.0"
+yarl==1.9.4 ; python_version >= "3.9" and python_version < "4.0"
