--- a/readmeai/config/settings/config.toml
+++ b/readmeai/config/settings/config.toml
@@ -68,12 +68,12 @@ quick_links = """
 ## 🔗 Quick Links
 
 > - [📍 Overview](#-overview)
-> - [📦 Features](#-features)
+> - [🔮 Features](#-features)
 > - [📂 Repository Structure](#-repository-structure)
 > - [🧩 Modules](#-modules)
 > - [🚀 Getting Started](#-getting-started)
->   - [⚙️ Install](#️-install)
->   - [► Using {repo_name}](#-using-{repo_name})
+>   - [📦 Install](#️-install)
+>   - [💻 Using {repo_name}](#-using-{repo_name})
 >   - [🧪 Tests](#-tests)
 > - [🛠 Project Roadmap](#-project-roadmap)
 > - [🤝 Contributing](#-contributing)
@@ -88,12 +88,12 @@ toc = """\
   <summary><h4>Table of Contents</h4></summary>
 
 - [📍 Overview](#-overview)
-- [📦 Features](#-features)
+- [🔮 Features](#-features)
 - [📂 Repository Structure](#-repository-structure)
 - [🧩 Modules](#-modules)
 - [🚀 Getting Started](#-getting-started)
-  - [⚙️ Install](#️-install)
-  - [► Using {repo_name}](#-using-{repo_name})
+  - [📦 Install](#️-install)
+  - [💻 Using {repo_name}](#-using-{repo_name})
   - [🧪 Tests](#-tests)
 - [🛠 Project Roadmap](#-project-roadmap)
 - [🤝 Contributing](#-contributing)
@@ -114,7 +114,7 @@ overview = """
 
 # Features Template
 features = """
-## 📦 Features
+## 🔮 Features
 
 {0}
 
@@ -145,13 +145,13 @@ quickstart = """
 
 ## 🚀 Getting Started
 
-***Requirements***
+### ⚙️ Prerequisites
 
-Ensure you have the following dependencies installed on your system:
+Ensure you have the following installed on your local machine:
 
 * {prerequisites}
 
-### ⚙️ Install
+### 📦 Install
 
 1. Clone the {repo_name} repository:
 
@@ -171,7 +171,7 @@ cd {repo_name}
 {install_command}
 ```
 
-### ► Using `{repo_name}`
+### 💻 Using `{repo_name}`
 
 Use the following command to run {repo_name}:
 
