--- a/readmeai/config/settings/markdown.toml
+++ b/readmeai/config/settings/markdown.toml
@@ -41,12 +41,12 @@ quick_links = """
 ## 🔗 Quick Links
 
 > - [📍 Overview](#-overview)
-> - [📦 Features](#-features)
+> - [🔮 Features](#-features)
 > - [📂 Repository Structure](#-repository-structure)
 > - [🧩 Modules](#-modules)
 > - [🚀 Getting Started](#-getting-started)
->   - [⚙️ Install](#️-install)
->   - [► Using {repo_name}](#-using-{repo_name})
+>   - [📦 Install](#️-install)
+>   - [💻 Using {repo_name}](#-using-{repo_name})
 >   - [🧪 Tests](#-tests)
 > - [🛠 Project Roadmap](#-project-roadmap)
 > - [🤝 Contributing](#-contributing)
@@ -61,12 +61,12 @@ toc = """\
   <summary><h4>Table of Contents</h4></summary>
 
 - [📍 Overview](#-overview)
-- [📦 Features](#-features)
+- [🔮 Features](#-features)
 - [📂 Repository Structure](#-repository-structure)
 - [🧩 Modules](#-modules)
 - [🚀 Getting Started](#-getting-started)
-  - [⚙️ Install](#️-install)
-  - [► Using {repo_name}](#-using-{repo_name})
+  - [📦 Install](#️-install)
+  - [💻 Using {repo_name}](#-using-{repo_name})
   - [🧪 Tests](#-tests)
 - [🛠 Project Roadmap](#-project-roadmap)
 - [🤝 Contributing](#-contributing)
@@ -87,7 +87,7 @@ overview = """
 
 # Features Template
 features = """
-## 📦 Features
+## 🔮 Features
 
 {0}
 
@@ -118,13 +118,13 @@ quickstart = """
 
 ## 🚀 Getting Started
 
-***Requirements***
+### ⚙️ Prerequisites
 
-Ensure you have the following dependencies installed on your system:
+Ensure you have the following installed on your local machine:
 
 * {prerequisites}
 
-### ⚙️ Install
+### 📦 Install
 
 1. Clone the {repo_name} repository:
 
@@ -144,7 +144,7 @@ cd {repo_name}
 {install_command}
 ```
 
-### ► Using `{repo_name}`
+### 💻 Using `{repo_name}`
 
 Use the following command to run {repo_name}:
 
@@ -209,7 +209,7 @@ Contributions are welcome! Here are several ways you can contribute:
 <details closed>
 <summary>Contributor Graph</summary>
 <br>
-<p align="left">
+<p align="center">
    <a href="https://{host_domain}{{/{full_name}/}}graphs/contributors">
       <img src="https://contrib.rocks/image?repo={full_name}">
    </a>
