--- a/readmeai/config/settings/config.toml
+++ b/readmeai/config/settings/config.toml
@@ -1,3 +1,8 @@
+# Default API Settings
+[api]
+content = "You're a brilliant Tech Lead and Software Engineer with a passion for open-source projects."
+rate_limit = 10
+
 # File Resources
 [files]
 blacklist = "blacklist.toml"
@@ -16,15 +21,13 @@ repository = "https://github.com/eli64s/readme-ai"
 # Language Model API Settings
 [llm]
 api = "openai"
-content = "You are an experienced staff software engineer, versed in all programming languages and tools. You are tasked with creating a robust README and documentation for a new project."
-endpoint = "https://api.openai.com/v1/chat/completions"
-encoding = "cl100k_base"
+base_url = "https://api.openai.com/v1/chat/completions"
+context_window = 4000
+encoder = "cl100k_base"
 model = "gpt-3.5-turbo"
-offline = false
-rate_limit = 6
 temperature = 0.9
-tokens = 699
-tokens_max = 3999
+tokens = 650
+top_p = 0.9
 
 # Markdown Template Settings
 [md]
@@ -68,12 +71,12 @@ quick_links = """
 ## 🔗 Quick Links
 
 > - [📍 Overview](#-overview)
-> - [🔮 Features](#-features)
-> - [📂 Repository Structure](#-repository-structure)
-> - [🧩 Modules](#-modules)
+> - [🧩 Features](#-features)
+> - [🗂️ Repository Structure](#-repository-structure)
+> - [📦 Modules](#-modules)
 > - [🚀 Getting Started](#-getting-started)
->   - [📦 Install](#️-install)
->   - [💻 Using {repo_name}](#-using-{repo_name})
+>   - [⚙️ Installation](#️-installation)
+>   - [🤖 Usage](#-usage)
 >   - [🧪 Tests](#-tests)
 > - [🛠 Project Roadmap](#-project-roadmap)
 > - [🤝 Contributing](#-contributing)
@@ -88,12 +91,12 @@ toc = """\
   <summary><h4>Table of Contents</h4></summary>
 
 - [📍 Overview](#-overview)
-- [🔮 Features](#-features)
-- [📂 Repository Structure](#-repository-structure)
-- [🧩 Modules](#-modules)
+- [🧩 Features](#-features)
+- [🗂️ Repository Structure](#-repository-structure)
+- [📦 Modules](#-modules)
 - [🚀 Getting Started](#-getting-started)
-  - [📦 Install](#️-install)
-  - [💻 Using {repo_name}](#-using-{repo_name})
+  - [⚙️ Installation](#️-installation)
+  - [🤖 Usage](#-usage)
   - [🧪 Tests](#-tests)
 - [🛠 Project Roadmap](#-project-roadmap)
 - [🤝 Contributing](#-contributing)
@@ -114,7 +117,7 @@ overview = """
 
 # Features Template
 features = """
-## 🔮 Features
+## 🧩 Features
 
 {0}
 
@@ -124,7 +127,7 @@ features = """
 # Directory Structure Tree
 tree_depth = 3
 tree = """
-## 📂 Repository Structure
+## 🗂️ Repository Structure
 
 ```sh
 {0}
@@ -136,7 +139,7 @@ tree = """
 # Codebase Summaries
 modules_widget = """<details closed><summary>{0}</summary>\n\n{1}\n\n</details>\n"""
 modules = """
-## 🧩 Modules
+## 📦 Modules
 """
 
 # Quickstart Template
@@ -145,47 +148,45 @@ quickstart = """
 
 ## 🚀 Getting Started
 
-### ⚙️ Prerequisites
+**System Requirements**
 
-Ensure you have the following installed on your local machine:
+* {system_requirements}
 
-* {prerequisites}
+### ⚙️ Installation
 
-### 📦 Install
+<h4>From <code>source</code></h4>
 
-1. Clone the {repo_name} repository:
+> 1. Clone the {repo_name} repository:
+>
+> ```console
+> $ git clone {repo_url}
+> ```
+>
+> 2. Change to the project directory:
+> ```console
+> $ cd {repo_name}
+> ```
+>
+> 3. Install the dependencies:
+> ```console
+> $ {install_command}
+> ```
 
-```sh
-git clone {repo_url}
-```
+### 🤖 Usage
 
-2. Change to the project directory:
+<h4>From <code>source</code></h4>
 
-```sh
-cd {repo_name}
-```
-
-3. Install the dependencies:
-
-```sh
-{install_command}
-```
-
-### 💻 Using `{repo_name}`
-
-Use the following command to run {repo_name}:
-
-```sh
-{run_command}
-```
+> Run {repo_name} using the command below:
+> ```console
+> $ {run_command}
+> ```
 
 ### 🧪 Tests
 
-Use the following command to run tests:
-
-```sh
-{test_command}
-```
+> Run the test suite using the command below:
+> ```console
+> $ {test_command}
+> ```
 
 ---
 """
