--- a/readmeai/config/settings/markdown.toml
+++ b/readmeai/config/settings/markdown.toml
@@ -41,12 +41,12 @@ quick_links = """
 ## 🔗 Quick Links
 
 > - [📍 Overview](#-overview)
-> - [🔮 Features](#-features)
-> - [📂 Repository Structure](#-repository-structure)
-> - [🧩 Modules](#-modules)
+> - [🧩 Features](#-features)
+> - [🗂️ Repository Structure](#-repository-structure)
+> - [📦 Modules](#-modules)
 > - [🚀 Getting Started](#-getting-started)
->   - [📦 Install](#️-install)
->   - [💻 Using {repo_name}](#-using-{repo_name})
+>   - [⚙️ Installation](#️-installation)
+>   - [🤖 Usage](#-usage)
 >   - [🧪 Tests](#-tests)
 > - [🛠 Project Roadmap](#-project-roadmap)
 > - [🤝 Contributing](#-contributing)
@@ -61,12 +61,12 @@ toc = """\
   <summary><h4>Table of Contents</h4></summary>
 
 - [📍 Overview](#-overview)
-- [🔮 Features](#-features)
-- [📂 Repository Structure](#-repository-structure)
-- [🧩 Modules](#-modules)
+- [🧩 Features](#-features)
+- [🗂️ Repository Structure](#-repository-structure)
+- [📦 Modules](#-modules)
 - [🚀 Getting Started](#-getting-started)
-  - [📦 Install](#️-install)
-  - [💻 Using {repo_name}](#-using-{repo_name})
+  - [⚙️ Installation](#️-installation)
+  - [🤖 Usage](#-usage)
   - [🧪 Tests](#-tests)
 - [🛠 Project Roadmap](#-project-roadmap)
 - [🤝 Contributing](#-contributing)
@@ -87,7 +87,7 @@ overview = """
 
 # Features Template
 features = """
-## 🔮 Features
+## 🧩 Features
 
 {0}
 
@@ -97,7 +97,7 @@ features = """
 # Directory Structure Tree
 tree_depth = 3
 tree = """
-## 📂 Repository Structure
+## 🗂️ Repository Structure
 
 ```sh
 {0}
@@ -109,7 +109,7 @@ tree = """
 # Codebase Summaries
 modules_widget = """<details closed><summary>{0}</summary>\n\n{1}\n\n</details>\n"""
 modules = """
-## 🧩 Modules
+## 📦 Modules
 """
 
 # Quickstart Template
@@ -118,47 +118,45 @@ quickstart = """
 
 ## 🚀 Getting Started
 
-### ⚙️ Prerequisites
+**System Requirements**
 
-Ensure you have the following installed on your local machine:
+* {system_requirements}
 
-* {prerequisites}
+### ⚙️ Installation
 
-### 📦 Install
+<h4>From <code>source</code></h4>
 
-1. Clone the {repo_name} repository:
+> 1. Clone the {repo_name} repository:
+>
+> ```console
+> $ git clone {repo_url}
+> ```
+>
+> 2. Change to the project directory:
+> ```console
+> $ cd {repo_name}
+> ```
+>
+> 3. Install the dependencies:
+> ```console
+> $ {install_command}
+> ```
 
-```sh
-git clone {repo_url}
-```
+### 🤖 Usage
 
-2. Change to the project directory:
+<h4>From <code>source</code></h4>
 
-```sh
-cd {repo_name}
-```
-
-3. Install the dependencies:
-
-```sh
-{install_command}
-```
-
-### 💻 Using `{repo_name}`
-
-Use the following command to run {repo_name}:
-
-```sh
-{run_command}
-```
+> Run {repo_name} using the command below:
+> ```console
+> $ {run_command}
+> ```
 
 ### 🧪 Tests
 
-Use the following command to run tests:
-
-```sh
-{test_command}
-```
+> Run the test suite using the command below:
+> ```console
+> $ {test_command}
+> ```
 
 ---
 """
