--- a/.dockerignore
+++ b/.dockerignore
@@ -37,6 +37,7 @@ noxfile.py
 # Work In Progress
 # Configuration Files (wip)
 scripts/test_gen.sh
+readmeai/config/settings/classifiers.toml
 readmeai/config/settings/models.toml
 readmeai/config/settings/quickstart_wip.toml
 readmeai/config/settings/quickstart.toml
