Fix table of contents format bug.

--- a/readmeai/config/settings/config.toml
+++ b/readmeai/config/settings/config.toml
@@ -88,7 +88,7 @@ quick_links = """
 toc = """\
 <!-- TABLE OF CONTENTS -->
 <details>
-  <summary><h4>Table of Contents</h4></summary>
+  <summary>Table of Contents</summary>
 
 - [📍 Overview](#-overview)
 - [🧩 Features](#-features)
