Clean up markdown and prompt config files.

--- a/readmeai/config/settings/markdown.toml
+++ b/readmeai/config/settings/markdown.toml
@@ -58,7 +58,7 @@ quick_links = """
 toc = """\
 <!-- TABLE OF CONTENTS -->
 <details>
-  <summary><h4>Table of Contents</h4></summary>
+  <summary>Table of Contents</summary>
 
 - [📍 Overview](#-overview)
 - [🧩 Features](#-features)
@@ -118,7 +118,7 @@ quickstart = """
 
 ## 🚀 Getting Started
 
-**System Requirements**
+**System Requirements:**
 
 * {system_requirements}
 
