--- a/readmeai/config/settings/config.toml
+++ b/readmeai/config/settings/config.toml
@@ -72,12 +72,12 @@ quick_links = """
 
 > - [📍 Overview](#-overview)
 > - [🧩 Features](#-features)
-> - [🗂️ Repository Structure](#-repository-structure)
+> - [🗂️ Repository Structure](#️-repository-structure)
 > - [📦 Modules](#-modules)
 > - [🚀 Getting Started](#-getting-started)
->   - [⚙️ Installation](#️-installation)
->   - [🤖 Usage](#-usage)
->   - [🧪 Tests](#-tests)
+>  - [⚙️ Installation](#️-installation)
+>  - [🤖 Usage](#-usage)
+>  - [🧪 Tests](#-tests)
 > - [🛠 Project Roadmap](#-project-roadmap)
 > - [🤝 Contributing](#-contributing)
 > - [📄 License](#-license)
@@ -85,6 +85,7 @@ quick_links = """
 
 ---
 """
+
 toc = """\
 <!-- TABLE OF CONTENTS -->
 <details>
@@ -92,7 +93,7 @@ toc = """\
 
 - [📍 Overview](#-overview)
 - [🧩 Features](#-features)
-- [🗂️ Repository Structure](#-repository-structure)
+- [🗂️ Repository Structure](#️-repository-structure)
 - [📦 Modules](#-modules)
 - [🚀 Getting Started](#-getting-started)
   - [⚙️ Installation](#️-installation)
