--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "readmeai"
-version = "0.5.074"
+version = "0.5.075"
 description = "👾 Automated README file generator, powered by large language model APIs."
 authors = ["Eli <egsalamie@gmail.com>"]
 license = "MIT"
@@ -42,15 +42,14 @@ readmeai = "readmeai.cli.main:main"
 python = "^3.9,<4.0.0"
 aiohttp = "^3.9.3"
 click = "^8.1.7"
-colorlog = "^6.7.0"
 gitpython = "^3.1.31"
-google-cloud-aiplatform = "*"
+google-generativeai = "^0.4.0"
 openai = "*"
-pydantic = ">=1.10.9,<2.0.0"
+pydantic = "^2.0.0"
+pyyaml = "^6.0.1"
 tenacity = "^8.2.2"
 tiktoken = "^0.4.0"
-toml = "^0.10.2"
-setuptools = "^69.0.3"
+toml = { version = "*", python = "<3.11" }
 
 [tool.poetry.group.dev.dependencies]
 ruff = "*"
@@ -78,12 +77,13 @@ exclude = [
 ]
 line-length = 79
 
-[tool.ruff.format]
+[ruff.format]
 quote-style = "double"
 docstring-code-format = true
 docstring-code-line-length = 20
 
-[tool.ruff.lint]
+[ruff.lint]
+extend-select = ["E501"]
 select = [
     # pycodestyle
     "E",
