--- a/setup/requirements.txt
+++ b/setup/requirements.txt
@@ -1,5 +1,6 @@
 aiohttp==3.9.3 ; python_version >= "3.9" and python_version < "4.0"
 aiosignal==1.3.1 ; python_version >= "3.9" and python_version < "4.0"
+annotated-types==0.6.0 ; python_version >= "3.9" and python_version < "4.0"
 anyio==4.3.0 ; python_version >= "3.9" and python_version < "4.0"
 async-timeout==4.0.3 ; python_version >= "3.9" and python_version < "3.11"
 attrs==23.2.0 ; python_version >= "3.9" and python_version < "4.0"
@@ -7,26 +8,18 @@ cachetools==5.3.3 ; python_version >= "3.9" and python_version < "4.0"
 certifi==2024.2.2 ; python_version >= "3.9" and python_version < "4.0"
 charset-normalizer==3.3.2 ; python_version >= "3.9" and python_version < "4.0"
 click==8.1.7 ; python_version >= "3.9" and python_version < "4.0"
-colorama==0.4.6 ; python_version >= "3.9" and python_version < "4.0" and (platform_system == "Windows" or sys_platform == "win32")
-colorlog==6.8.2 ; python_version >= "3.9" and python_version < "4.0"
+colorama==0.4.6 ; python_version >= "3.9" and python_version < "4.0" and platform_system == "Windows"
 distro==1.9.0 ; python_version >= "3.9" and python_version < "4.0"
 exceptiongroup==1.2.0 ; python_version >= "3.9" and python_version < "3.11"
 frozenlist==1.4.1 ; python_version >= "3.9" and python_version < "4.0"
 gitdb==4.0.11 ; python_version >= "3.9" and python_version < "4.0"
 gitpython==3.1.42 ; python_version >= "3.9" and python_version < "4.0"
+google-ai-generativelanguage==0.4.0 ; python_version >= "3.9" and python_version < "4.0"
 google-api-core==2.17.1 ; python_version >= "3.9" and python_version < "4.0"
 google-api-core[grpc]==2.17.1 ; python_version >= "3.9" and python_version < "4.0"
 google-auth==2.28.1 ; python_version >= "3.9" and python_version < "4.0"
-google-cloud-aiplatform==1.43.0 ; python_version >= "3.9" and python_version < "4.0"
-google-cloud-bigquery==3.17.2 ; python_version >= "3.9" and python_version < "4.0"
-google-cloud-core==2.4.1 ; python_version >= "3.9" and python_version < "4.0"
-google-cloud-resource-manager==1.12.2 ; python_version >= "3.9" and python_version < "4.0"
-google-cloud-storage==2.14.0 ; python_version >= "3.9" and python_version < "4.0"
-google-crc32c==1.5.0 ; python_version >= "3.9" and python_version < "4.0"
-google-resumable-media==2.7.0 ; python_version >= "3.9" and python_version < "4.0"
+google-generativeai==0.4.0 ; python_version >= "3.9" and python_version < "4.0"
 googleapis-common-protos==1.62.0 ; python_version >= "3.9" and python_version < "4.0"
-googleapis-common-protos[grpc]==1.62.0 ; python_version >= "3.9" and python_version < "4.0"
-grpc-google-iam-v1==0.13.0 ; python_version >= "3.9" and python_version < "4.0"
 grpcio-status==1.62.0 ; python_version >= "3.9" and python_version < "4.0"
 grpcio==1.62.0 ; python_version >= "3.9" and python_version < "4.0"
 h11==0.14.0 ; python_version >= "3.9" and python_version < "4.0"
@@ -34,26 +27,22 @@ httpcore==1.0.4 ; python_version >= "3.9" and python_version < "4.0"
 httpx==0.27.0 ; python_version >= "3.9" and python_version < "4.0"
 idna==3.6 ; python_version >= "3.9" and python_version < "4.0"
 multidict==6.0.5 ; python_version >= "3.9" and python_version < "4.0"
-numpy==1.26.4 ; python_version >= "3.9" and python_version < "4.0"
 openai==1.13.3 ; python_version >= "3.9" and python_version < "4.0"
-packaging==23.2 ; python_version >= "3.9" and python_version < "4.0"
 proto-plus==1.23.0 ; python_version >= "3.9" and python_version < "4.0"
 protobuf==4.25.3 ; python_version >= "3.9" and python_version < "4.0"
 pyasn1-modules==0.3.0 ; python_version >= "3.9" and python_version < "4.0"
 pyasn1==0.5.1 ; python_version >= "3.9" and python_version < "4.0"
-pydantic==1.10.14 ; python_version >= "3.9" and python_version < "4.0"
-python-dateutil==2.9.0 ; python_version >= "3.9" and python_version < "4.0"
+pydantic-core==2.16.3 ; python_version >= "3.9" and python_version < "4.0"
+pydantic==2.6.3 ; python_version >= "3.9" and python_version < "4.0"
+pyyaml==6.0.1 ; python_version >= "3.9" and python_version < "4.0"
 regex==2023.12.25 ; python_version >= "3.9" and python_version < "4.0"
 requests==2.31.0 ; python_version >= "3.9" and python_version < "4.0"
 rsa==4.9 ; python_version >= "3.9" and python_version < "4"
-setuptools==69.1.1 ; python_version >= "3.9" and python_version < "4.0"
-shapely==2.0.3 ; python_version >= "3.9" and python_version < "4.0"
-six==1.16.0 ; python_version >= "3.9" and python_version < "4.0"
 smmap==5.0.1 ; python_version >= "3.9" and python_version < "4.0"
 sniffio==1.3.1 ; python_version >= "3.9" and python_version < "4.0"
 tenacity==8.2.3 ; python_version >= "3.9" and python_version < "4.0"
 tiktoken==0.4.0 ; python_version >= "3.9" and python_version < "4.0"
-toml==0.10.2 ; python_version >= "3.9" and python_version < "4.0"
+toml==0.10.2 ; python_version >= "3.9" and python_version < "3.11"
 tqdm==4.66.2 ; python_version >= "3.9" and python_version < "4.0"
 typing-extensions==4.10.0 ; python_version >= "3.9" and python_version < "4.0"
 urllib3==2.2.1 ; python_version >= "3.9" and python_version < "4.0"
