--- a/.dockerignore
+++ b/.dockerignore
@@ -63,15 +63,8 @@ mkdocs.yml
 Makefile
 
 # Work In Progress (WIP)
+examples/images/dalle
+readmeai/config/settings/themes
 readmeai/config/settings/classifiers.toml
 readmeai/config/settings/models.toml
-
-# Github Actions (WIP)
-.github/workflows/ci.yml
-
-# Submodules (WIP)
-readmeai/templates/
-readmeai/ui/
-
-# Dalle-3 Images (WIP)
-examples/images/dalle
+readmeai/utils/file_cleaner.py
